[gd_scene load_steps=6 format=3 uid="uid://hy7hgrfa135b"]

[ext_resource type="Script" uid="uid://dyg0o8ni1u7du" path="res://Scenes/Game/game.gd" id="1_y3kpf"]
[ext_resource type="PackedScene" uid="uid://bu7mjkxoi6ve7" path="res://Scenes/Barrier/Barrier.tscn" id="2_gwu2e"]
[ext_resource type="PackedScene" uid="uid://bb1j0hrkiax8y" path="res://Scenes/Game_UI/Game_UI.tscn" id="2_y3kpf"]
[ext_resource type="PackedScene" uid="uid://ddo5ay6xovwjt" path="res://Scenes/Plane/Plane.tscn" id="3_xbxml"]
[ext_resource type="PackedScene" uid="uid://dol2kkyifkw7r" path="res://Scenes/ParallaxBg/parallax_bg.tscn" id="3_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_y3kpf")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Game_UI" parent="UI" instance=ExtResource("2_y3kpf")]

[node name="ParallaxBg" parent="." instance=ExtResource("3_y3kpf")]
scale = Vector2(0.79, 0.79)

[node name="Barrier" parent="." instance=ExtResource("2_gwu2e")]

[node name="Plane" parent="." instance=ExtResource("3_xbxml")]
position = Vector2(113, 336)

[node name="PipeContainer" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="UpperPt" type="Marker2D" parent="."]
position = Vector2(580, 152)

[node name="LowerPt" type="Marker2D" parent="."]
position = Vector2(580, 713)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
